<resources>
    <string name="app_name">CriEngine 📚</string>

    <!-- Profile Component -->
    <string name="user_profile_text">%1$s\'s Profile</string>
    <string name="bio_header">Bio:</string>
    <string name="bio_text">Edit your bio here</string>
    <string name="contact_info">Contact Information:</string>
    <string name="phone_header">Phone:</string>
    <string name="address_header">Address:</string>
    <string name="phone_text_hint">(XXX) XXX-XXXX</string>
    <string name="address_text_hint">52 Example St</string>

    <!-- Tutorial  -->
    <string name="swipe_tutorial">⬅️ Swipe Left &amp; Right to navigate ➡️</string>
    <string name="refresh_tutorial">⬇️ Swipe Down to refresh ⬇️</string>
    <string name="profile_tutorial">Clicking a name will give more info!</string>
    <string name="nav_var_tutorial">↶ Click an icon to navigate too! ↷</string>

    <!-- My Profile Fragment -->
    <string name="cancel_button">Cancel</string>
    <string name="logout_button">Logout</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>

    <!-- User Profile Activity -->
    <string name="user_books_text">%1$s\'s Books:</string>

    <!-- My Books Activity -->
    <string name="add_a_book_button">Add A Book</string>
    <string name="my_books_header">My Books</string>
    <string name="my_books_filter">Filter</string>

    <!-- Requests For Book Activity -->
    <string name="requests_for_book_header">Requests on: INSERT NAME</string>

    <!-- Add Book Activity -->
    <string name="scan_book_button">Scan</string>
    <string name="book_title_hint">Book Title</string>
    <string name="book_desc_hint">Description</string>
    <string name="book_author_hint">Author</string>
    <string name="book_isbn_hint">ISBN</string>
    <string name="book_warning">*Please Fill Out All Fields</string>
    <string name="add_book_save_button">Save and Add Photo</string>

    <!--  Book Details Activity  -->
    <string name="book_title_placeholder">Title</string>
    <string name="book_detail">Detail: </string>
    <string name="book_author">Author: </string>
    <string name="book_isbn">ISBN: </string>
    <string name="book_status">Status: </string>
    <string name="book_owner">Owner: </string>
    <string name="book_borrower">Borrower: </string>

    <!--  My Book Details Activity  -->
    <string name="edit_book">Edit Book</string>
    <string name="see_requests">See Requests</string>
    <string name="delete_book">Delete Book</string>

    <!-- Notifications Activity -->
    <string name="notifications_header">Notifications</string>

    <!-- Login Activity -->
    <string name="login_header">Login</string>
    <string name="register">Register an Account</string>
    <string name="registerConfirm">Submit</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="account_warning">Please fill out all fields to submit</string>
    <string name="username">Username</string>

    <!-- Bottom Navigation -->
    <string name="title_search">Search</string>
    <string name="title_my_books">My Books</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_profile">My Profile</string>

    <!--    Scan Activity    -->
    <string name="scan_prompt">Please scan the barcode</string>
    <string name="scan_complete">Scan complete, press confirm</string>
    <string name="scan_confirm">Confirm Scan</string>

    <!-- Outgoing Requests Fragment -->
    <string name="requests_header">My Requests</string>

    <!-- Something Went Wrong Activity -->
    <string name="apology">Sorry! Something went wrong.</string>
    <string name="apologySubHeader">Navigate away by using the nav-bar</string>

    <!-- Non Owner Book View Activity -->
    <string name="request_book_button">Request This Book</string>

    <!-- Camera Activity  -->
    <string name="picture_info_text">Click image to open camera</string>
    <string name="save_picture">Save</string>
    <string name="delete_picture">Delete</string>

    <!-- Book Component XML  -->
    <string name="click_to_edit_image">Click image to edit</string>
    <string name="meeting_location">Meeting location</string>

    <!-- Geolocation -->
    <string name="confirm_location">Confirm</string>

    <!-- Mapbox -->
    <string name="mapbox_access_token">pk.eyJ1IjoicmptYWgxIiwiYSI6ImNraHYwcDhwbDBjdHgycm1ud21sMmtnNzkifQ.Rse6Ld79kjmY3_-7g7cpbw</string>
    <string name="user_location_permission_not_granted">Please give location privileges to the app</string>

    <!-- Search Activity -->
    <string name="search_book">Books Matching: </string>
    <string name="search_profile">Profiles Matching: </string>
    <string name="search_checkbox">Show All Books</string>

</resources>