<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <item
        android:id="@+id/bottom_navigation_item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/bottom_navigation_item_notifications"
        android:icon="@drawable/ic_alert_add"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/bottom_navigation_item_my_requests"
        android:icon="@drawable/ic_requests"
        android:title="@string/requests_header" />

    <item
        android:id="@+id/bottom_navigation_item_my_books"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/title_my_books" />

    <item
        android:id="@+id/bottom_navigation_item_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_my_profile" />

</menu>